# jinja2-ext-custom-autoescaping

./: .gitignore  LICENSE  README.md  pyproject.toml
jinja2_ext_custom_autoescaping/: __init__.py  ext.py
tests/: test_jinja2_ext_custom_autoescaping.py  test_template.txt
