[tool.poetry]
name = "jinja2-ext-custom-autoescaping"
version = "0.1.0"
description = "Jinja2 extension to enable the use of any filter as the autescape filter."
license = "CC0"
authors = ["mbello <mbello@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/mbello/jinja2-ext-custom-autoescaping"
homepage = "https://github.com/mbello/jinja2-ext-custom-autoescaping"
keywords = ['jinja2-ext', 'autoescape', 'autoescaping', 'custom autoescape']


[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
